# python-project-50

./: .coverage  .coveragerc  .gitignore  Makefile  Mikefile  README.md  coverage.xml  pyproject.toml  requirements.txt  test1.yml  test2.yml
.github/workflows/: ci.yml  sonarcloud.yml
gendiff/: Makefile  __init__.py
gendiff/diff/: diff_builder.py  generate_diff.py  parse_file.py
gendiff/formattes/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/scripts/diff/: diff_builder.py  generate_diff.py  parse_file.py
hexlet_code.egg-info/: PKG-INFO
tests/: .coverage  coverage.xml  test1.yml  test2.yml  test_formattes.py  test_gendiff_cli.py  test_generate_diff.py  test_parser.py  test_scripts.py
tests/test_data/: rec_file1.json
